Docker関連ファイルを.gitignoreに追加
- Dockerfile、docker-compose.yml等を除外
- ローカル開発環境の設定を保護
- セキュリティとプライバシーの向上

--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,12 @@ coverage/
 *.temp
 .tmp/
 
-# Docker関連（ローカル設定）
-docker-compose.override.yml
+# Docker関連
+Dockerfile
+docker-compose.yml
+docker-compose.*.yml
+.dockerignore
+docker/
 
 # MCP設定（APIキーを含む可能性）
 mcp-config/
